--- a/LevelUp2019/Atividade2/Style.css
+++ b/LevelUp2019/Atividade2/Style.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: blueviolet;
 }
@@ -5,6 +6,12 @@ body {
 h1 {
     align-content: center;
     color: aquamarine;
+}
+
+#imgHeader {
+    max-width: 50%;
+    max-height: 50%;
+    background-color: aliceblue;
 }
 
 #p10 {
