--- a/Web-dev-bootcamp/Site/css/carrierstyles.css
+++ b/Web-dev-bootcamp/Site/css/carrierstyles.css
@@ -56,3 +56,30 @@ a:visited {
     color: purple;
     background: green;
 }
+
+body {
+    font-size: 8px;
+}
+
+p {
+    font-family: Arial;
+    /* font-size: 10px; */
+    font-size: 2em;
+    font-weight: bold;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: underline;
+}
+
+h1 {
+    /* font-family: Georgia; */
+    /* font-size: 200px; */
+    font-size: 5.0em;
+    text-align: center;
+    text-decoration: wavy;
+    font-family: "Lacquer";
+}
+
+span {
+    font-size: 2.0em;
+}
